# 3k1s_Rectangles_41

./: Basic_41.cpp  Basic_41.h  CMakeLists.txt  GenerateTask41.cpp  GenerateTask41.h  Point.h  Rectangle.h  RectanglesSet.h  Solution_1.cpp  Solution_1.h  Solution_2.cpp  Solution_2.h  Table.csv  X_output.txt  answer_output.txt  checkGenerate1.txt  checkGenerate2.txt  main.cpp  rightFormAnswer.txt  unfinishedFunctiosAndCrazyIdeas.h
