cmake_minimum_required(VERSION 3.20)
project(3k1s_Rectangles_41)

set(CMAKE_CXX_STANDARD 23)

add_executable(3k1s_Rectangles_41
        main.cpp
        Rectangle.h
        Point.h
        Solution_1.cpp
        Solution_1.h
        Basic_41.cpp
        Basic_41.h
        GenerateTask41.cpp
        GenerateTask41.h
        )
